# sophusDemo

./: CMakeLists.txt  README.md  useSophus.cpp
example/: CMakeLists.txt  trajectoryError.cpp
